--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,14 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'yarn'
+        
+    - name: Enable Corepack
+      run: |
+        corepack enable
+        corepack prepare yarn@4.7.0 --activate
         
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install
       
     - name: Run tests
       run: yarn test
